apps/babble/babble-server/service.yaml
apiVersion: v1
kind: Service
metadata:
  namespace: babble
  name: babble-server
spec:
  type: ClusterIP
  selector:
    app: babble-server
  ports:
    - port: 80
      targetPort: 8080
