apps/babble/babble-server/istio.yaml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  namespace: babble
  name: babble-server
spec:
  gateways:
  - istio-ingress/waffle-ingressgateway
  - mesh
  hosts:
  - babble.wafflestudio.com
  http:
  - route:
    - destination:
        host: babble-server
